--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   analog_clock: ^0.0.1
   http: ^0.12.2
+  fl_chart: ^0.11.0
+  flutter_svg: ^0.17.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,7 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
