--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   http: ^0.12.2
   fl_chart: ^0.11.0
-  flutter_svg: ^0.17.1
+  url_launcher: ^5.5.0
 
   cupertino_icons: ^0.1.3
 
