--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,17 +17,17 @@ dependencies:
   http: ^0.12.2
   fl_chart: ^0.11.0
   url_launcher: ^5.5.0
+  
 
-  cupertino_icons: ^0.1.3
+  # cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/
 
